CHANGES IN VERSION 2.7.3
------------------------
 o add universe slot in enrichResult <2015-05-05, Tue>
 
CHANGES IN VERSION 2.7.2
------------------------
 o add vertex.label.font parameter in enrichMap <2015-04-27, Mon>

CHANGES IN VERSION 2.7.1
------------------------
 o update NCG description in enrichNCG <2015-04-22, Wed>

CHANGES IN VERSION 2.5.12
------------------------
 o report NA in qvalue column when it fail to calculate instead of throw error <2015-03-09, Thu>
 o update IC data <2015-03-08, Wed> 
 
CHANGES IN VERSION 2.5.11
------------------------
 o implement clusterSim and mclusterSim <2015-03-07, Tue>
 
CHANGES IN VERSION 2.5.10
------------------------
 o implement enrichNCG and now gseAnalyzer accept setType = "NCG" <2015-04-01, Wed>
   see http://ncg.kcl.ac.uk
 o change use_internal_data parameter to ... in all S3 generics and methods <2015-04-01, Wed>
 
CHANGES IN VERSION 2.5.9
------------------------
 o extend gseAnalyzer to support use_internal_data parameter <2015-03-29, Sun>
 
CHANGES IN VERSION 2.5.8
------------------------
 o keep order of barplot, sorted by pvalue by defalt <2015-02-11, Wed>

CHANGES IN VERSION 2.5.7
------------------------
 o fixed typo in vignette <2015-02-10, Tue>
 
CHANGES IN VERSION 2.5.6
------------------------
 o add organismMapper to satisfy the change of enrichKEGG <2015-01-28, Wed>
 
CHANGES IN VERSION 2.5.5
------------------------
 o introduce use_internal_data parameter for enrichKEGG of clusterProfiler <2015-01-27, Tue>
 
CHANGES IN VERSION 2.5.3
------------------------
 o update vignette <2015-01-27, Tue>
 
CHANGES IN VERSION 2.5.1
------------------------
 o add CITATION <2015-01-19, Mon>
 
CHANGES IN VERSION 2.3.6
------------------------
 o add readable parameter in simplot <2014-10-09, Thu>

CHANGES IN VERSION 2.3.5
------------------------
 o implement enrichMap <2014-07-28, Wed>

CHANGES IN VERSION 2.3.4
------------------------
 o return ggplot2 objects in gseaplot <2014-07-21, Mon>
